--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-	<meta charset="UTF-8">
-	<title>タイトル</title>
-	<link rel="stylesheet" href="/assets/css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>過去問データベース</title>
+    <link rel="stylesheet" href="/styles/layout.css" type="text/css">
 </head>
 <body>
-	<%= yield %>
+    <nav>
+        <div class="header">
+            <a href="/" class="title">過去問データベース</a>
+        </div>
+    </nav>
+    <%= yield %>
 </body>
 </html>
