update: 検索ボタンの見た目を変更

--- a/views/index.erb
+++ b/views/index.erb
@@ -27,7 +27,7 @@
                     <% end %>><%= term %></option>
                 <% end %>
             </select>
-            <button type="submit" class="button">フィルタ</button>
+            <button type="submit" class="button">🔍 検索</button>
         </form>
     </div>
 
