--- a/public/styles/detail.css
+++ b/public/styles/detail.css
@@ -1,6 +1,12 @@
 .body {
-  padding: 0 8%;
+  padding: 0 5%;
   margin-top: 30px;
+  position: relative;
+}
+.image-object {
+  height: auto;
+  min-height: 1000px;
+  margin-bottom: 100px;
 }
 .delete-button {
   height: 45px;
