--- a/public/styles/detail.css
+++ b/public/styles/detail.css
@@ -9,12 +9,16 @@
   margin-bottom: 100px;
 }
 .delete-button {
+  position: absolute;
+  right: 30px;
+  bottom: 36px;
   height: 45px;
   font-size: 20px;
   font-weight: bold;
   color: #fff;
   background-color: #dc143c;
-  border-style: none;
-  border-radius: 6px;
+  border: none;
+  border-radius: 8px;
   padding: 0 15px;
+  cursor: pointer;
 }
