--- a/views/index.erb
+++ b/views/index.erb
@@ -30,10 +30,11 @@
             <button type="submit" class="button">🔍 検索</button>
         </form>
     </div>
-
+    <div class="posts-container">
     <% @posts.each do |post| %>
         <a href="/id/<%= post.id %>"><div class="posts"><%= gradeList[post.grade.to_i] %> <% if post.course.to_i != 0 %><%= courseList[post.course.to_i] %><% end %> <%= termList[post.term.to_i] %> <%= post.subject_name %></div></a>
     <% end %>
+    </div>
 
     <div class="button-container">
         <button id="upload_widget" class="button upload-button">過去問を追加する</button>
