--- a/views/index.erb
+++ b/views/index.erb
@@ -44,7 +44,7 @@
     </div>
 
     <div class="button-container">
-        <button id="upload_widget" class="button upload-button">過去問を追加する</button>
+        <button id="upload_widget" class="button upload-button">+</button>
     </div>
     
     <%= erb :"partials/_post_form" %>
