--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -5,13 +5,14 @@
   flex-direction: row;
 }
 .posts {
-  height: 60px;
-  background-color: #efefef;
+  width: 100%;
+  height: 80px;
+  background-color: #e6e6e6;
   margin: 8px;
   display: flex;
   align-items: center;
   padding-left: 12px;
-  border-radius: 6px;
+  border-radius: 8px;
   font-size: 18px;
 }
 .button {
@@ -77,7 +78,7 @@
 .file-selector {
   text-align: center;
   height: 300px;
-  background-color: #efefef;
+  background-color: #e6e6e6;
   border-radius: 10px;
   border: 1px solid;
   display: flex;
@@ -121,7 +122,7 @@ select {
 }
 
 .memo {
-  background-color: #efefef;
+  background-color: #e6e6e6;
   width: 100%;
   height: 30px;
   border-radius: 5px;
